--- a/Example/KHealthTools/Support Files/khts_navi_config.plist
+++ b/Example/KHealthTools/Support Files/khts_navi_config.plist
@@ -7,10 +7,12 @@
 	<key>navi_back_icon_white</key>
 	<string></string>
 	<key>navi_title_color</key>
-	<string>17,255,266</string>
+	<string></string>
 	<key>navi_title_font</key>
 	<integer>120</integer>
 	<key>theme_color</key>
 	<string>252,46,53</string>
+	<key>theme_color2</key>
+	<string>146,219,221</string>
 </dict>
 </plist>
